MAJOR CHANGES in JADE XXX (XXX)
==========================================================================
GENERAL IMPROVEMENTS:
- detect-main (to be done)
- Added support to deregister transitions in FSMBehaviour 
- Modified MainReplicationService to issue NEW_NODE and NEW_SLICE VCommands when a Main Container replica enters the ring
- Added method dump() to BaseService to support runtime service inspection by means of the ContainerMonitorAgent
- Added method getLocalServices() in ServiceManager interface
 
BUG-FIXES:
- Fixed bug in SSAchieveREResponder related to the receiption of successive messages when a performative different than REQUEST was used (Fix by Chris Audley)
- Fixed bug in WakerBehaviour reset() method

LEAP:


ADD-ONS:
- Misc Add-on
  - Added support for DUMP-SERVICE action

- JADE-SHARP Add-on


DOCUMENTATION:

POSSIBLE BACKWARD INCOMPATIBILITIES:
API: NONE

EXPECTED BEHAVIOUR:
- detect-main





MAJOR CHANGES in JADE 3.5 (25 June 2007)
==========================================================================
GENERAL IMPROVEMENTS:
DF	
- Modified DF to automatically remove subscriptions of dead agents when the autocleanup option is specified
- Modified DF to support a pool of thread serving registration, deregistration and search requests when using DB-based KnowledgeBase (option jade_domain_df_poolsize)
- Modified DF to support turning off content validation mode (option jade_domain_df_disablevalidation) 
- Optimized DF search when using DB-based KnowledgeBase
- Modified DF to cache subscription relevant information. This speeds up performances when detecting subscribed agents to be notified about registration updates

Content language and ontologies
- Created CFReflectiveIntrospector to support usage of java.util classes in ontological classes
- Added methods to get predicate, concept and action names from an ontology
- Committed automatically generated SL and ACL parser classes
- Added method to define action-result type in AgentActionSchema
